docs: update api/user.go
